doc(guides.springBootWeb): add notes about attempt to fix

--- a/platforms/documentation/docs/src/samples/spring-boot-web-application/README.adoc
+++ b/platforms/documentation/docs/src/samples/spring-boot-web-application/README.adoc
@@ -12,6 +12,7 @@
     ** `./gradlew bootRun`
         *** Problems:
             **** Problem1: "nested exception is java.lang.IllegalStateException: Could not evaluate condition on org.springframework.boot.autoconfigure.r2dbc"
+                ***** Attempt1: Adjust gradle's configurations -- 1. 'build.gradle', 2. IDE's   --
                 ***** Solution: TODO:
             **** Problem2: "Could not read workspace metadata from /XXX/.gradle/caches/8.7/kotlin-dsl/XX/metadata.bin > /XX/.gradle/caches/8.7/XX/metadata.bin (No such file or directory)
                 ***** Solution: `rm -rf ~/.gradle`
