doc(guides.springBootWeb): add related repo

--- a/platforms/documentation/docs/src/samples/spring-boot-web-application/README.adoc
+++ b/platforms/documentation/docs/src/samples/spring-boot-web-application/README.adoc
@@ -20,3 +20,4 @@
 
 ## Notes
 * Check https://github.com/dancer1325/spring-guides-gradle
+* Check https://github.com/dancer1325/spring-guides-spring-boot
