--- a/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/Gradle Wrapper/gradle_wrapper_basics.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/Gradle Wrapper/gradle_wrapper_basics.adoc
@@ -15,63 +15,40 @@
 [[gradle_wrapper_basics]]
 = Gradle Wrapper Basics
 
-The **recommended way to execute any Gradle build** is with the Gradle Wrapper.
+* **recommended way to execute any Gradle build**
 
 image::gradle-basic-2.png[]
 
-The _Wrapper_ script invokes a declared version of Gradle, downloading it beforehand if necessary.
+* how does it work?
 
 image::wrapper-workflow.png[]
 
-The Wrapper is available as a `gradlew` or `gradlew.bat` file.
-
-The Wrapper provides the following benefits:
-
-- Standardizes a project on a given Gradle version.
-- Provisions the same Gradle version for different users.
-- Provisions the Gradle version for different execution environments (IDEs, CI servers...).
+* -- based on -- OS
+    ** (Linux or OSX) `gradlew`
+    ** (Windows) `gradlew.bat`
+* benefits
+    ** standardizes a project | given Gradle version
+    ** SAME Gradle version / different users
+    ** provision the Gradle version / different execution environments (IDEs, CI servers...).
 
 [[sec:using_the_wrapper]]
 == Using the Gradle Wrapper
 
-It is always recommended to execute a build with the Wrapper to ensure a reliable, controlled, and standardized execution of the build.
+* via
+    ** non-Gradle wrapper
 
-Depending on the operating system, you run `gradlew` or `gradlew.bat` instead of the `gradle` command.
+    $ gradle build
 
-Typical Gradle invocation:
+    ** wrapper
+        *** | Linux or OSX
 
-----
-$ gradle build
-----
+    $ ./gradlew build      // | root directory
 
-To run the Wrapper on a Linux or OSX machine:
+        *** | Windows PowerShell
 
-----
-$ ./gradlew build
-----
+    $ .\gradlew.bat build  // | root directory
 
-To run the Wrapper on Windows PowerShell:
-
-----
-$ .\gradlew.bat build
-----
-
-The command is run in the same directory that the Wrapper is located in.
-If you want to run the command in a different directory, you must provide the relative path to the Wrapper:
-
-----
-$ ../gradlew build
-----
-
-The following console output demonstrates the use of the Wrapper on a Windows machine, in the command prompt (cmd), for a Java-based project:
-
-----
-$ gradlew.bat build
-
-include::{snippetsPath}/wrapper/simple/tests/wrapperBatchFileExecution.out[]
-----
-
-Consult the <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle Wrapper reference>> to learn more.
+* Check <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle Wrapper reference>>
 
 [.text-right]
 **Next Step:** <<command_line_interface_basics.adoc#command_line_interface_basics,Learn about the Gradle CLI>> >>
