--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/tasks/more_about_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/tasks/more_about_tasks.adoc
@@ -190,32 +190,47 @@ check - Runs all checks.
 [[sec:task_outcomes]]
 == Task outcomes
 
-When Gradle executes a task, it labels the task with outcomes via the console.
+* == outcomes | console
+* == label the task  | after Gradle execution task /
+    ** -- based on --
+        *** are there actions / task must execute ?
+        *** were the actions -- executed by -- Gradle ?
 
 image::author-tasks-1.png[]
 
-These labels are based on whether a task has actions to execute and if Gradle executed them.
-Actions include, but are not limited to, compiling code, zipping files, and publishing archives.
+* `(no label)` or `EXECUTED`
+    ** == *Task executed its actions.*
+    ** use cases
+        *** if Task has actions -> Gradle executed the actions
+        *** if Task has NO actions & some dependencies -> Gradle executed >= 1 of the dependencies
+            **** Check <<organizing_tasks.adoc#sec:lifecycle_tasks,Lifecycle Tasks>>
 
-`(no label)` or `EXECUTED`:: *Task executed its actions.*
-* Task has actions and Gradle executed them.
-* Task has no actions and some dependencies, and Gradle executed one or more of the dependencies. See also <<organizing_tasks.adoc#sec:lifecycle_tasks,Lifecycle Tasks>>.
+* `UP-TO-DATE`
+    ** == *Task's outputs and inputs did not change.*
+        *** Check <<incremental_build.adoc#incremental_build,Incremental Build>>
+    ** use cases
+        *** if Task has actions -> task -- tells, NO outputs changes to -- Gradle
+        *** if Task has NO actions & some dependencies -> ALL the dependencies are `UP-TO-DATE`, `SKIPPED` or `FROM-CACHE`
+            **** Check <<organizing_tasks.adoc#sec:lifecycle_tasks,Lifecycle Tasks>>
 
-`UP-TO-DATE`:: *Task's outputs did not change.*
-* Task has outputs and inputs but they have not changed. See <<incremental_build.adoc#incremental_build,Incremental Build>>.
-* Task has actions, but the task tells Gradle it did not change its outputs.
-* Task has no actions and some dependencies, but all the dependencies are `UP-TO-DATE`, `SKIPPED` or `FROM-CACHE`. See <<organizing_tasks.adoc#sec:lifecycle_tasks,Lifecycle Tasks>>.
-* Task has no actions and no dependencies.
+* `FROM-CACHE`
+    ** == *Task's outputs -- could be found from a -- previous execution.*
+    ** -- based on -- build cache
+        *** Check <<build_cache.adoc#build_cache,Build Cache>>
 
-`FROM-CACHE`:: *Task's outputs could be found from a previous execution.*
-* Task has outputs restored from the build cache. See <<build_cache.adoc#build_cache,Build Cache>>.
+* `SKIPPED`
+    ** == *Task did not execute its actions.*
+    ** use cases
+        *** Task -- has been explicitly excluded from the -- CL
+            **** Check <<command_line_interface.adoc#sec:excluding_tasks_from_the_command_line,Excluding tasks from execution>>
+        *** Task -- has an -- `onlyIf` predicate / return false
+            **** Check <<controlling_task_execution.adoc#sec:using_a_predicate,Using a predicate>>
 
-`SKIPPED`:: *Task did not execute its actions.*
-* Task has been explicitly excluded from the command-line. See <<command_line_interface.adoc#sec:excluding_tasks_from_the_command_line,Excluding tasks from execution>>.
-* Task has an `onlyIf` predicate return false. See <<controlling_task_execution.adoc#sec:using_a_predicate,Using a predicate>>.
-
-`NO-SOURCE`:: *Task did not need to execute its actions.*
-* Task has inputs and outputs, but <<incremental_build.adoc#skip-when-empty,no sources>> (i.e., inputs were not found).
+* `NO-SOURCE`
+    ** == *Task did not need to execute its actions.*
+    ** use cases
+        *** Task has inputs and outputs, BUT <<incremental_build.adoc#skip-when-empty,no sources>> found
+            **** _Example:_ inputs were NOT found
 
 [[sec:task_groups]]
 == Task group and description
