--- a/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/Task/task_basics.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/Task/task_basics.adoc
@@ -15,109 +15,44 @@
 [[task_basics]]
 = Task Basics
 
-A task represents some *independent unit of work* that a build performs, such as compiling classes, creating a JAR, generating Javadoc, or publishing archives to a repository.
+* := basic unit of work of a project
+    ** 👁️ defined | 👁️
+        *** build script OR
+        *** plugin
+    ** exist built-in tasks
+        *** `Copy`
+        *** `Delete`
+        *** `Exec`
+        *** `Zip`
+    ** run via
+        *** Gradle Wrapper
+            **** Check '../GradleWrapper'
+        *** CLI
+            **** Check '../CLI'
+    ** Example:
+        *** compile a code
+        *** copy & move files
+        *** run a test
+        *** create ".jar"
+        *** generate Javadoc
+        *** publish artifacts to repositories
 
 image::gradle-basic-5.png[]
 
-You run a Gradle `build` task using the `gradle` command or by invoking the Gradle Wrapper (`./gradlew` or `gradlew.bat`) in your project directory:
-
-[source,text]
-----
-$ ./gradlew build
-----
-
 == Available tasks
-All available tasks in your project come from Gradle plugins and build scripts.
 
-You can list all the available tasks in the project by running the following command in the terminal:
-
-[source,text]
-----
-$ ./gradlew tasks
-----
-
-[source,text]
-----
-Application tasks
------------------
-run - Runs this project as a JVM application
-
-Build tasks
------------
-assemble - Assembles the outputs of this project.
-build - Assembles and tests this project.
-
-...
-
-Documentation tasks
--------------------
-javadoc - Generates Javadoc API documentation for the main source code.
-
-...
-
-Other tasks
------------
-compileJava - Compiles main Java source.
-
-...
-----
+* `./gradlew tasks`
 
 == Running tasks
-The `run` task is executed with `./gradlew run`:
 
-[source,text]
-----
-$ ./gradlew run
-
-> Task :app:compileJava
-> Task :app:processResources NO-SOURCE
-> Task :app:classes
-
-> Task :app:run
-Hello World!
-
-BUILD SUCCESSFUL in 904ms
-2 actionable tasks: 2 executed
-----
-
-In this example Java project, the output of the `run` task is a `Hello World` statement printed on the console.
+* `./gradlew run`
 
 == Task dependency
 
-Many times, a task requires another task to run first.
-
-For example, for Gradle to execute the `build` task, the Java code must first be compiled.
-Thus, the `build` task _depends_ on the `compileJava` task.
-
-This means that the `compileJava` task will run _before_ the `build` task:
-
-[source,text]
-----
-$ ./gradlew build
-
-> Task :app:compileJava
-> Task :app:processResources NO-SOURCE
-> Task :app:classes
-> Task :app:jar
-> Task :app:startScripts
-> Task :app:distTar
-> Task :app:distZip
-> Task :app:assemble
-> Task :app:compileTestJava
-> Task :app:processTestResources NO-SOURCE
-> Task :app:testClasses
-> Task :app:test
-> Task :app:check
-> Task :app:build
-
-BUILD SUCCESSFUL in 764ms
-7 actionable tasks: 7 executed
-----
-
-Build scripts can optionally define task dependencies.
-Gradle then automatically determines the task execution order.
-
-Consult the <<more_about_tasks.adoc#more_about_tasks,Task development chapter>> to learn more.
+* == task -- requires -- another task / run first
+* _Example:_ `build` task -- depends on -- `compileJava` task
+* if you define task dependencies | Build scripts -> Gradle -- automatically determines the -- task execution order
+* Check <<more_about_tasks.adoc#more_about_tasks,Task development chapter>>
 
 [.text-right]
 **Next Step:** <<plugin_basics.adoc#plugin_basics,Learn about Plugins>> >>
