--- a/platforms/documentation/docs/src/docs/userguide/overview/What's Gradle?/userguide.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/overview/What's Gradle?/userguide.adoc
@@ -18,41 +18,89 @@
 [[gradle_overview]]
 == Gradle Build Tool
 
-image:gradle.png[float=left] Gradle Build Tool is a fast, dependable, and adaptable open-source https://en.wikipedia.org/wiki/Build_automation[build automation] tool with an elegant and extensible declarative build language.
+image:gradle.png[]
 
-In this User Manual, Gradle Build Tool is abbreviated **Gradle**.
+* := https://en.wikipedia.org/wiki/Build_automation[build automation] tool
+    ** of
+        *** software build
+        *** related processes
+            **** source code — is compiled to — binary code
+            **** packaging binary code
+            **** run automated tests
+    ** characteristics
+        *** fast
+        *** dependable results
+        *** scalable
+        *** customizable
+        *** open-source
+            **** mature
+            **** active community
+        *** build language
+            **** extensible
+            **** declarative
+            **** easy
 
 == Why Gradle?
 
-Gradle is a widely used and mature tool with an active community and a strong developer ecosystem.
-
-* Gradle is the most popular build system for the JVM and is the default system for Android and Kotlin Multi-Platform projects.
-It has a rich community plugin ecosystem.
-* Gradle can automate a wide range of software build scenarios using either its built-in functionality, third-party plugins, or custom build logic.
-* Gradle provides a high-level, declarative, and expressive build language that makes it easy to read and write build logic.
-* Gradle is fast, scalable, and can build projects of any size and complexity.
-* Gradle produces dependable results while benefiting from optimizations such as incremental builds, build caching, and parallel execution.
-
-Gradle, Inc. provides a free service called https://scans.gradle.com/[Build Scan®] that provides extensive information and insights about your builds.
-You can view scans to identify problems or share them for debugging help.
+* popularity
+    ** most popular build system for JVM
+    ** default system for projects
+        *** Android
+        *** Kotlin Multiplatform
+    ** rich community plugin ecosystem
+* valid | wide range of software build scenarios
+    ** size
+    ** complexity
+* provides
+    ** built-in functionality
+    ** TP plugins
+    ** custom build logic
+* build language
+* provided optimizations
+    ** incremental builds
+    ** build caching
+    ** parallel execution
+* https://scans.gradle.com/[Build Scan®]
+    ** free service /
+        *** -- provided by -- Gradle, Inc
+        *** provides about your builds
+            **** extensive information
+            **** insights
+            **** easy to share
 
 === Supported Languages and Frameworks
-Gradle supports Android, Java, Kotlin Multiplatform, Groovy, Scala, Javascript, and C/C++.
+* Android,
+* Java
+* Kotlin Multiplatform
+* Groovy
+* Scala
+* Javascript
+* C/C++
 
 image::userguide-languages.png[]
 
 === Compatible IDEs
-All major IDEs support Gradle, including Android Studio, IntelliJ IDEA, Visual Studio Code, Eclipse, and NetBeans.
+* Android Studio
+* IntelliJ IDEA
+* Visual Studio Code
+* Eclipse
+* NetBeans
 
 image::userguide-ides.png[]
 
-You can also invoke Gradle via its <<command_line_interface.adoc#command_line_interface,command-line interface>> (CLI) in your terminal or through your continuous integration (CI) server.
+* ways to invoke
+    ** CLI
+        *** Check <<command_line_interface.adoc#command_line_interface,command-line interface>>
+    ** Gradle on CI
 
 == Education
-The **<<about_manual.adoc#about_manual,Gradle User Manual>>** is the official documentation for the Gradle Build Tool.
 
-* **Getting Started Tutorial** — <<getting_started_eng.adoc#introduction,Learn Gradle basics>> and the benefits of building your App with Gradle.
-* **Training Courses** — Head over to the link:https://gradle.org/courses/[courses page] to sign up for free Gradle training.
+* **<<about_manual.adoc#about_manual,Gradle User Manual>>**
+    ** official documentation
+* **Getting Started Tutorial**
+    ** <<getting_started_eng.adoc#introduction,Learn Gradle basics>>
+* **Training Courses**
+    ** link:https://gradle.org/courses/[courses page]
 
 == Support
 * **Forum** — The fastest way to get help is through the link:https://discuss.gradle.org/[Gradle Forum].
