--- a/platforms/documentation/docs/src/docs/userguide/overview/about_manual.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/overview/about_manual.adoc
@@ -20,19 +20,28 @@ Explore our guides and examples to use Gradle.
 [[releases]]
 == Releases
 
-Information on Gradle releases and how to install Gradle is found on the <<installation.adoc#installation,Installation page>>.
+* <<installation.adoc#installation,Installation page>>
 
 [[content]]
 == Content
 
-The Gradle User Manual is broken down into the following sections:
-
-<<command_line_interface.adoc#command_line_interface,Running Gradle Builds>> :: Learn Gradle basics and how to use Gradle to build your project.
-<<build_lifecycle.adoc#build_lifecycle,Authoring Gradle Builds>> :: Develop tasks and plugins to customize your build.
-<<building_java_projects.adoc#building_java_projects,Authoring JVM Builds>> :: Use Gradle with your Java project.
-<<dependency_management_terminology.adoc#dependency_management_terminology,Working with Dependencies>> :: Add dependencies to your build.
-<<performance.adoc#performance_gradle,Optimizing Builds>> :: Use caches to optimize your build and understand the Gradle daemon, incremental builds and file system watching.
-<<jenkins.adoc#build_jenkins,Gradle on CI>> :: Gradle integration with popular continuous integration (CI) servers.
+* <<command_line_interface.adoc#command_line_interface,Running Gradle Builds>>
+    ** Gradle basics
+    ** how to use Gradle
+* <<build_lifecycle.adoc#build_lifecycle,Authoring Gradle Builds>>
+    ** Develop tasks & plugins / customize your build
+* <<building_java_projects.adoc#building_java_projects,Authoring JVM Builds>>
+    ** Gradle | Java project
+* <<dependency_management_terminology.adoc#dependency_management_terminology,Working with Dependencies>>
+    ** add dependencies | your build
+* <<performance.adoc#performance_gradle,Optimizing Builds>>
+    ** -- via --
+        *** caches
+        *** incremental builds
+        *** file system watching
+    ** understand the Gradle daemon
+* <<jenkins.adoc#build_jenkins,Gradle on CI>>
+    ** -- integration with -- popular CI servers
 
 [[reference]]
 == Reference
