--- a/platforms/documentation/docs/src/docs/userguide/releases/Installing Gradle/installation.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/Installing Gradle/installation.adoc
@@ -18,8 +18,9 @@
 [[gs:installation]]
 == Gradle Installation
 
-If all you want to do is run an existing Gradle project, then you don't need to install Gradle if the build uses the <<gradle_wrapper#gradle_wrapper_reference,Gradle Wrapper>>.
-This is identifiable by the presence of the `gradlew` or `gradlew.bat` files in the root of the project:
+* if you ONLY want to run a project / exist <<gradle_wrapper#gradle_wrapper_reference,Gradle Wrapper>> ->
+    ** NOT need to install Gradle
+    ** check your system <<installation#sec:prerequisites,satisfies Gradle's prerequisites>>
 
 [listing,subs=+macros]
 ----
@@ -30,12 +31,7 @@ This is identifiable by the presence of the `gradlew` or `gradlew.bat` files in 
 ├── gradlew.bat     // <3>
 └── ⋮
 ----
-<1> Project root directory.
-<2> <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle Wrapper>>.
-<3> Scripts for executing Gradle builds.
-
-If the `gradlew` or `gradlew.bat` files are already present in your project, *you do not need to install Gradle*.
-But you need to make sure your system <<installation#sec:prerequisites,satisfies Gradle's prerequisites>>.
+* TODO
 
 You can follow the steps in the <<upgrading_version_8.adoc#upgrading_version_8,Upgrading Gradle section>> if you want to update the Gradle version for your project.
 Please use the <<gradle_wrapper.adoc#sec:upgrading_wrapper,Gradle Wrapper>> to upgrade Gradle.
