--- a/platforms/documentation/docs/src/docs/userguide/running-builds/additional/Continuous build/continuous_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/additional/Continuous build/continuous_builds.adoc
@@ -15,62 +15,62 @@
 [[continuous_builds]]
 = Continuous Builds
 
-Continuous Build allows you to automatically re-execute the requested tasks when file inputs change.
-You can execute the build in this mode using the `-t` or `--continuous` command-line option.
+* := build mode
+* allows
+    ** if file inputs change → automatically re-execute the requested (& dependent) tasks | 👁️after passing quiet period / NO more changes 👁️
+        *** if you want to add build logic changes -> continuous build must be restarted manually
+        *** quiet period
+            **** := period (in ms) without detecting changes
+            **** `<<build_environment.adoc#sec:gradle_configuration_properties,org.gradle.continuous.quietperiod>>`
+* `… -t` / `--continuous`
+* _Example:_
 
-For example, you can continuously run the `test` task and all dependent tasks by running:
+    gradle test --continuous   // test and ALL dependent tasks are run continuously
 
-----
-$ gradle test --continuous
-----
-
-Gradle will behave as if you ran `gradle test` after a change to sources or tests that contribute to the requested tasks.
-This means unrelated changes (such as changes to build scripts) will not trigger a rebuild.
-To incorporate build logic changes, the continuous build must be restarted manually.
-
-Continuous build uses <<file_system_watching.adoc#sec:daemon_watch_fs,file system watching>> to detect changes to the inputs.
-If file system watching does not work on your system, then continuous build won't work either.
-In particular, continuous build does not work when using `--no-daemon`.
-
-When Gradle detects a change to the inputs, it will not trigger the build immediately.
-Instead, it will wait until no additional changes are detected for a certain period of time - the quiet period.
-You can configure the quiet period in milliseconds by the Gradle property `<<build_environment.adoc#sec:gradle_configuration_properties,org.gradle.continuous.quietperiod>>`.
+* how does it work?
+    ** -- via -- <<file_system_watching.adoc#sec:daemon_watch_fs,file system watching>>
+        *** == detect changes | inputs
+* root causes / continuous builds do NOT work
+    ** file system watching does NOT work | your system
+    ** if you use `--no-daemon`
 
 == Terminating Continuous Build
-If Gradle is attached to an interactive input source, such as a terminal, the continuous build can be exited by pressing `CTRL-D` (On Microsoft Windows, it is required to also press `ENTER` or `RETURN` after `CTRL-D`).
 
-If Gradle is not attached to an interactive input source (e.g. is running as part of a script), the build process must be terminated (e.g. using the `kill` command or similar).
-
-If the build is being executed via the Tooling API, the build can be cancelled using the Tooling API's cancellation mechanism.
+* ways to terminate Continuous Build
+    ** if Gradle -- is attached to an -- interactive input source (_Example:_ terminal)  → `CTRL-D`
+    ** if Gradle is NOT attached to an interactive input source (_Example:_ part of a script) → `kill`
+    ** if it’s executed via Tooling API → use Tooling API ‘s cancellation mechanism
 
 [[continuous_build_limitations]]
 == Limitations
-Under some circumstances, continuous build may not detect changes to inputs.
+
+* cases / inputs changes are NOT detected
 
 [[sec:continuous_build_missing_files]]
 === Creating input directories
-Sometimes, creating an input directory that was previously missing does not trigger a build, due to the way file system watching works.
-For example, creating the `src/main/java` directory may not trigger a build.
-Similarly, if the input is a <<working_with_files.adoc#filtering_files,filtered file tree>> and no files are matching the filter, the creation of matching files may not trigger a build.
+
+* input directory / previously missing
+* _Example1:_ create the `src/main/java` (-> PREVIOUSLY, it was missing)
+* _Example2:_ if the input is a <<working_with_files.adoc#filtering_files,filtered file tree>> & NO files match the filter
 
 [[sec:continuous_build_untracked]]
 === Inputs of untracked tasks
-Changes to the inputs of <<incremental_build.adoc#sec:disable-state-tracking,untracked tasks>> or tasks that have no outputs may not trigger a build.
+
+* <<incremental_build.adoc#sec:disable-state-tracking,untracked tasks>> OR tasks / NO outputs
 
 [[sec:continuous_build_project_dir]]
 === Changes to files outside of project directories
-Gradle only watches for changes to files inside the project directory.
-Changes to files outside the project directory will go undetected and not trigger a build.
+
+* files outside the project directory
 
 [[sec:build_cycles]]
 === Build cycles
-Gradle starts watching for changes just before a task executes.
-If a task modifies its own inputs while executing, Gradle will detect the change and trigger a new build.
-If every time the task executes, the inputs are modified again, the build will be triggered again.
-This isn't unique to continuous build.
-A task that modifies its own inputs will never be considered up-to-date when run "normally" without continuous build.
 
-If your build enters a build cycle like this, you can track down the task by looking at the list of files reported changed by Gradle.
-After identifying the file(s) that are changed during each build, you should look for a task that has that file as an input.
-In some cases, it may be obvious (e.g., a Java file is compiled with `compileJava`).
-In other cases, you can use `--info` logging to find the task that is out-of-date due to the identified files.
+* if task modifies its own inputs | executing
+    ** -> Gradle will
+        *** detect the change
+        *** trigger a new build
+    ** | NO Continuous Build (== default mode) -> will NEVER be considered "UP-TO-DATE"
+    ** if you want to track down the task -> you need to identify the reported changed files / inputs change
+        *** ".java" -- is compiled with -- `compileJava`
+        *** `--info`
