--- a/platforms/documentation/docs/src/docs/userguide/jvm/java_library_plugin.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/jvm/java_library_plugin.adoc
@@ -15,15 +15,17 @@
 [[java_library_plugin]]
 = The Java Library Plugin
 
-The Java Library plugin expands the capabilities of the <<java_plugin.adoc#java_plugin,Java Plugin (`java`)>> by providing specific knowledge about Java libraries.
-In particular, a Java library exposes an API to consumers (i.e., other projects using the Java or the Java Library plugin).
-All the source sets, tasks and configurations exposed by the Java plugin are implicitly available when using this plugin.
-
+* -- expands the capabilities of the -- <<java_plugin.adoc#java_plugin,Java Plugin (`java`)>> / -- provide -- specific knowledge about Java libraries
+    ** exposes an API
+    ** based on tasks
+        *** compile Java source code -- via -- `compileJava` task
+        *** generates Javadoc -- via -- `javadoc` task
+        *** compiled classes -- are packaged into -- a ".jar", -- via -- `jar` task
 
 [[sec:java_library_usage]]
 == Usage
 
-To use the Java Library plugin, include the following in your build script:
+* add | your build script
 
 .Using the Java Library plugin
 ====
@@ -31,10 +33,10 @@ include::sample[dir="snippets/java-library/quickstart/kotlin",files="build.gradl
 include::sample[dir="snippets/java-library/quickstart/groovy",files="build.gradle[tags=use-plugin]"]
 ====
 
-
 [[sec:java_library_separation]]
 == API and implementation separation
 
+* TODO:
 The key difference between the standard Java plugin and the Java Library plugin is that the latter introduces the concept of an _API_ exposed to consumers. A library is a Java component meant to be consumed by other components. It's a very common use case in multi-project builds, but also as soon as you have external dependencies.
 
 The plugin exposes two <<declaring_dependencies.adoc#sec:what-are-dependency-configurations,configurations>> that can be used to declare dependencies: `api` and `implementation`.
